--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,11 @@
 # Site Specific Configuration
-name: LightSpeed
-description: A simple Jekyll theme
-url: https://example.com
-author: tajacks
-timezone: America/Toronto
-timezone_short: ET
+title: ASMap
+description: The website for the ASMap project's research, development, and other resources.
+url: https://asmap.dev
+author: ASMap Website Authors
 
 # Keywords
 keywords: ['seo', 'key', 'words']
-
-# Analytics (Plausible requires sign-up)
-analytics:
-  plausible:
-    enabled: false
-    site_fqdn: 'your.site.fqdn'
-    script_source: 'https://plausible.io/js/script.js'
 
 # Styling
 sass:
