--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,6 +1,4 @@
+- name: Home
+  link: /
 - name: Posts
   link: /posts
-- name: Categories
-  link: /categories/
-- name: About & Contact
-  link: /
